WIP damn integration tests

--- a/metron-analytics/metron-profiler-storm/src/main/config/profiler.properties
+++ b/metron-analytics/metron-profiler-storm/src/main/config/profiler.properties
@@ -62,6 +62,8 @@ profiler.hbase.column.family=P
 profiler.hbase.batch=10
 profiler.hbase.flush.interval.seconds=30
 
+profiler.hbase.client.creator
+
 ##### Kafka #####
 
 kafka.zk=node1:2181
