Changes required for ProfilerIntegrationTest to be able to mock HBase like before

--- a/metron-analytics/metron-profiler-storm/src/main/flux/profiler/remote.yaml
+++ b/metron-analytics/metron-profiler-storm/src/main/flux/profiler/remote.yaml
@@ -137,6 +137,9 @@ components:
             - ${profiler.window.lag}
             - "${profiler.window.lag.units}"
 
+    -   id: "hbaseClientCreator"
+        className: "${profiler.hbase.client.creator}"
+
 spouts:
 
     -   id: "kafkaSpout"
@@ -180,7 +183,7 @@ bolts:
             - ref: "hbaseMapper"
         configMethods:
             - name: "withHBaseClientCreator"
-              args: ["${profiler.hbase.client.creator}"]
+              args: [ref: "hbaseClientCreator"]
             - name: "withConnectionFactory"
               args: ["${hbase.provider.impl}"]
             - name: "withBatchSize"
