--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,9 @@
     <profiles>
         <profile>
             <id>HDP-3.1</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
                 <hdp_version>3.1.0.0</hdp_version>
                 <global_hbase_version>2.0.2</global_hbase_version>
