Latest feature branch work with Ryan's hadoop 3.1.1 upgrade work

--- a/metron-platform/metron-hbase/metron-hbase-common/pom.xml
+++ b/metron-platform/metron-hbase/metron-hbase-common/pom.xml
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <classifier>tests</classifier>
+            <!--classifier>tests</classifier-->
             <version>${global_hadoop_version}</version>
             <scope>provided</scope>
             <exclusions>
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-            <classifier>tests</classifier>
+            <!--classifier>tests</classifier-->
             <version>${global_hadoop_version}</version>
             <scope>provided</scope>
         </dependency>
