--- a/metron-platform/metron-enrichment/metron-enrichment-storm/pom.xml
+++ b/metron-platform/metron-enrichment/metron-enrichment-storm/pom.xml
@@ -33,6 +33,11 @@
         <guava.version>${global_hbase_guava_version}</guava.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2</version>
+        </dependency>
 
         <!-- Metron -->
         <dependency>
@@ -70,6 +75,12 @@
             <artifactId>stellar-common</artifactId>
             <version>${project.parent.version}</version>
             <scope>provided</scope>
+            <exclusions>
+              <exclusion>
+                  <artifactId>commons-lang</artifactId>
+                  <groupId>commons-lang</groupId>
+              </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Hadoop -->
@@ -98,6 +109,10 @@
                 <exclusion>
                     <groupId>org.apache.hadoop</groupId>
                     <artifactId>hadoop-common</artifactId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>commons-lang</artifactId>
+                  <groupId>commons-lang</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -129,6 +144,10 @@
                     <artifactId>slf4j-log4j12</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
+                <exclusion>
+                  <artifactId>commons-lang</artifactId>
+                  <groupId>commons-lang</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -139,6 +158,10 @@
                 <exclusion>
                     <artifactId>servlet-api</artifactId>
                     <groupId>javax.servlet</groupId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>commons-lang</artifactId>
+                  <groupId>commons-lang</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -201,6 +224,10 @@
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-lang</artifactId>
+                    <groupId>commons-lang</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
