Turning up debug logging for the Profiler integration test

--- a/metron-analytics/metron-profiler-storm/src/test/resources/log4j.properties
+++ b/metron-analytics/metron-profiler-storm/src/test/resources/log4j.properties
@@ -30,3 +30,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 # uncomment below to help debug tests
 #log4j.logger.org.apache.metron.profiler=ALL
 #log4j.logger.org.apache.storm.windowing=ALL
+
+log4j.logger.org.apache.metron.profiler=DEBUG
