Undo unecessary change

--- a/metron-analytics/pom.xml
+++ b/metron-analytics/pom.xml
@@ -40,6 +40,8 @@
 		</license>
 	</licenses>
 	<modules>
+		<module>metron-maas-service</module>
+		<module>metron-maas-common</module>
 		<module>metron-statistics</module>
 		<module>metron-profiler-storm</module>
 		<module>metron-profiler-client</module>
