--- a/pom.xml
+++ b/pom.xml
@@ -148,13 +148,14 @@
                 <global_storm_kafka_version>1.2.3</global_storm_kafka_version>
                 <global_zeppelin_version>0.8.0</global_zeppelin_version>
                 <global_solr_version>7.4.0</global_solr_version>
+                <base_hadoop_version>3.1.1</base_hadoop_version>
                 <global_hbase_version>2.0.2</global_hbase_version>
                 <global_hbase_guava_version>17.0</global_hbase_guava_version>
                 <!-- For Zookeeper/Curator version compatibility see
                       http://curator.apache.org/zk-compatibility.html -->
                 <global_zookeeper_version>3.4.6</global_zookeeper_version>
-                <global_curator_version>4.2.0</global_curator_version>
-                <global_curator_test_version>2.12.0</global_curator_test_version>
+                <global_curator_version>2.7.1</global_curator_version>
+                <global_curator_test_version>2.7.1</global_curator_test_version>
             </properties>
         </profile>
         <profile>
@@ -174,8 +175,8 @@
                 <!-- For Zookeeper/Curator version compatibility see
                       http://curator.apache.org/zk-compatibility.html -->
                 <global_zookeeper_version>3.4.6</global_zookeeper_version>
-                <global_curator_version>4.2.0</global_curator_version>
-                <global_curator_test_version>2.12.0</global_curator_test_version>
+                <global_curator_version>2.7.1</global_curator_version>
+                <global_curator_test_version>2.7.1</global_curator_test_version>
             </properties>
         </profile>
     </profiles>
