--- a/metron-platform/metron-hbase/metron-hbase-common/src/test/resources/log4j.properties
+++ b/metron-platform/metron-hbase/metron-hbase-common/src/test/resources/log4j.properties
@@ -25,3 +25,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 log4j.appender.stdout.filter.1=org.apache.log4j.varia.StringMatchFilter
 log4j.appender.stdout.filter.1.StringToMatch=interrupted
 log4j.appender.stdout.filter.1.AcceptOnMatch=false
+
+log4j.logger.org.apache.hadoop.hbase=DEBUG
+log4j.logger.org.apache.zookeeper=DEBUG
