--- a/metron-platform/metron-data-management/pom.xml
+++ b/metron-platform/metron-data-management/pom.xml
@@ -360,6 +360,12 @@
             <version>${global_junit_version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>org.glassfish.jersey.containers</groupId>
+          <artifactId>jersey-container-jdk-http</artifactId>
+          <version>2.18</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
