--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@
 
 dist: trusty
 sudo: required
-addons:
-  chrome: stable
+#addons:
+#  chrome: stable
 
 env:
   - SCRIPT="mvn surefire:test@unit-tests -T 2C"
   - SCRIPT="mvn surefire:test@integration-tests"
   - SCRIPT="mvn clean site --projects site-book"
-  - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
+#  - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
   - SCRIPT="./dev-utilities/build-utils/verify_licenses.sh"
 
 install: true
@@ -35,11 +35,11 @@ before_install:
   - export PATH=$M2_HOME/bin:$PATH
   - '[[ -d $M2_HOME ]] || curl --retry 10 -O https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip'
   - '[[ -d $M2_HOME ]] || unzip -qq apache-maven-3.3.9-bin.zip'
-  - npm config set cache $HOME/.npm-cache --global
-  - npm config set prefix $HOME/.npm-prefix --global
+#  - npm config set cache $HOME/.npm-cache --global
+#  - npm config set prefix $HOME/.npm-prefix --global
 
 install:
-  - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
 
 script:
   - time $SCRIPT
