--- a/.travis.yml
+++ b/.travis.yml
@@ -16,15 +16,15 @@
 
 dist: trusty
 sudo: required
-#addons:
-#  chrome: stable
+addons:
+ chrome: stable
 
-env:
-  - SCRIPT="mvn surefire:test@unit-tests -T 2C"
-  - SCRIPT="mvn surefire:test@integration-tests"
-  - SCRIPT="mvn clean site --projects site-book"
-#  - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
-  - SCRIPT="./dev-utilities/build-utils/verify_licenses.sh"
+# env:
+#   - SCRIPT="mvn surefire:test@unit-tests -T 2C"
+#   - SCRIPT="mvn surefire:test@integration-tests"
+#   - SCRIPT="mvn clean site --projects site-book"
+#   - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
+#   - SCRIPT="./dev-utilities/build-utils/verify_licenses.sh"
 
 install: true
 language: java
@@ -35,18 +35,46 @@ before_install:
   - export PATH=$M2_HOME/bin:$PATH
   - '[[ -d $M2_HOME ]] || curl --retry 10 -O https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip'
   - '[[ -d $M2_HOME ]] || unzip -qq apache-maven-3.3.9-bin.zip'
-#  - npm config set cache $HOME/.npm-cache --global
-#  - npm config set prefix $HOME/.npm-prefix --global
+  - npm config set cache $HOME/.npm-cache --global
+  - npm config set prefix $HOME/.npm-prefix --global
 
-install:
-  - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
+# install:
+#   - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
 
-script:
-  - time $SCRIPT
+# script:
+#   - time $SCRIPT
 
 matrix:
   fast_finish: true
-
+  include:
+    - name: Unit Tests
+      script: 
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
+        - time mvn surefire:test@unit-tests -T 2C
+    
+    - name: Integration Tests
+      script:
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
+        - time mvn surefire:test@integration-tests
+    
+    - name: Site Book
+      script:
+        - time mvn clean site --projects site-book
+        
+    - name: Alerts UI Tests
+      script:
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl 'org.apache.metron:metron-alerts'
+        - time mvn test --projects metron-interface/metron-alerts
+        
+    - name: Management UI Tests
+      script:
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl 'org.apache.metron:metron-config'
+        - time mvn test --projects metron-interface/metron-config
+  
+    - name: Verify Licenses
+      script:
+        - time ./dev-utilities/build-utils/verify_licenses.sh  
+        
 before_cache:
   - rm -rf $HOME/.m2/repository/org/apache/metron
 
