--- a/.travis.yml
+++ b/.travis.yml
@@ -35,33 +35,33 @@ matrix:
   fast_finish: true
   include:
     - name: Unit Tests
-      script: 
-        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
+      script:
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!:metron-config,!:metron-alerts'
         - time mvn surefire:test@unit-tests -T 2C
-    
+
     - name: Integration Tests
       script:
-        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!org.apache.metron:metron-config,!org.apache.metron:metron-alerts'
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl '!:metron-config,!:metron-alerts'
         - time mvn surefire:test@integration-tests
-        
+
     - name: Alerts UI Tests
       script:
-        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl 'org.apache.metron:metron-alerts'
-        - time mvn test -pl 'org.apache.metron:metron-alerts'
-        
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl ':metron-alerts'
+        - time mvn test -pl ':metron-alerts'
+
     - name: Management UI Tests
       script:
-        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl 'org.apache.metron:metron-config'
-        - time mvn test -pl 'org.apache.metron:metron-config'
-  
+        - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl ':metron-config'
+        - time mvn test -pl ':metron-config'
+
     - name: Site Book
       script:
-        - time mvn clean site --projects site-book
-  
+        - time mvn clean site -pl site-book
+
     - name: Verify Licenses
       script:
-        - time ./dev-utilities/build-utils/verify_licenses.sh  
-        
+        - time ./dev-utilities/build-utils/verify_licenses.sh
+
 before_cache:
   - rm -rf $HOME/.m2/repository/org/apache/metron
 
